help design rebuilded

--- a/app/static/cards.css
+++ b/app/static/cards.css
@@ -1,167 +1,119 @@
-.tilesWrap {
-    padding: 0;
-    margin: 50px auto;
-    list-style: none;
-    text-align: center;
+//- Google Fonts
+$font-google-primary: 'https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap';
+$font-google-secondary: 'https://fonts.googleapis.com/css2?family=Montserrat&display=swap';
+
+//- @type List
+$abril-fatface: 'Abril Fatface', cursive;
+$montserrat: 'Montserrat', sans-serif;
+
+//- Typography
+$base-font-family: $montserrat;
+$heading-font-family: $abril-fatface;
+
+$font-size-small: 20px;
+
+/*- Screen Sizes*/
+$tablet-width: 768px;
+$desktop-width: 1024px;
+
+/* COLOR HEX */
+$cadet: #4f6d7aff;
+$maximum-blue: #5ea5b8ff;
+$columbia-blue: #c0d6dfff;
+$platinum: #eaeaeaff;
+$cultured: #f3f3f3ff;
+$nero: #444444;
+
+/* COLOR Gradient */
+$dl-gradient-right: linear-gradient(90deg, rgba(0,0,0,0.04) 20%, rgba(255,255,255,0) 0%);
+
+$body-background-color: $platinum;
+$body-text-color: $nero;
+
+//- Global Functions
+/*import fonts*/
+@if variable-exists(font-google-primary) {
+  @import url($font-google-primary);
+}
+@if variable-exists(font-google-secondary) {
+  @import url($font-google-secondary);
 }
 
-.tilesWrap li {
-    display: inline-block;
-    width: 20%;
-    min-width: 200px;
-    max-width: 230px;
-    padding: 80px 20px 40px;
-    position: relative;
-    vertical-align: top;
-    margin: 10px;
-    font-family: 'helvetica', san-serif;
-    min-height: 25vh;
-    background: #262a2b;
-    border: 1px solid #252727;
-    text-align: left;
+//- Global Mixins
+
+/*media queries*/
+@mixin tablet {
+  @media (min-width: #{$tablet-width}) and (max-width: #{$desktop-width - 1px}) {
+    @content;
+  }
 }
 
-.tilesWrap li h2 {
-    font-size: 114px;
-    margin: 0;
-    position: absolute;
-    opacity: 0.2;
-    top: 50px;
-    right: 10px;
-    transition: all 0.3s ease-in-out;
+@mixin desktop {
+  @media (min-width: #{$desktop-width}) {
+    @content;
+  }
 }
 
-.tilesWrap li h3 {
-    font-size: 20px;
-    color: #b7b7b7;
-    margin-bottom: 5px;
+@mixin tablet-up {
+  @media (min-width: #{$tablet-width}) {
+    @content;
+  }
 }
 
-.tilesWrap li p {
-    font-size: 16px;
-    line-height: 18px;
-    color: #b7b7b7;
-    margin-top: 5px;
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
 }
 
-.tilesWrap li button {
-    background: transparent;
-    border: 1px solid #b7b7b7;
-    padding: 10px 20px;
-    color: #b7b7b7;
-    border-radius: 3px;
-    position: relative;
-    transition: all 0.3s ease-in-out;
-    transform: translateY(-40px);
-    opacity: 0;
-    cursor: pointer;
-    overflow: hidden;
+body {
+    background-color: $body-background-color;
+    font-family: $base-font-family;
+    font-size: $font-size-small;
+    color: white;
+    line-height: 1.5;
+}
+.dl-blurbs {
+	display: grid;
+	@include tablet-up {
+		grid-template-columns: repeat(2, 1fr);
+		gap: 2vw;
+	}
+}
+/* LIST */
+dl {
+  counter-reset: count;
+	background: $dl-gradient-right;
+	padding-left: 4vw; //default is smartphone
+	padding-right: 4vw;
+	margin: 0;
+	@include tablet-up {padding-left: 2vw;}
+	@include desktop {
+		padding-top: 3vw;
+		padding-bottom: 3vw;
+	}
+	
+}
+dl + dl {
+	counter-reset: counter 4;
+}
+dt {
+  counter-increment: count;
+	color: $cadet;
+	font-family: $base-font-family;
+	font-size: 24px;
+	text-transform: uppercase;
+}
+dt::before {
+  content: counter(count, decimal-leading-zero)".";
+	font-family: $heading-font-family;
+	color: $maximum-blue;
+	margin-left: -1vw;
+	padding-right: 12px;
 }
 
-.tilesWrap li button:before {
-    content: '';
-    position: absolute;
-    height: 100%;
-    width: 120%;
-    background: #b7b7b7;
-    top: 0;
-    opacity: 0;
-    left: -140px;
-    border-radius: 0 20px 20px 0;
-    z-index: -1;
-    transition: all 0.3s ease-in-out;
-
-}
-
-.tilesWrap li:hover button {
-    transform: translateY(5px);
-    opacity: 1;
-}
-
-.tilesWrap li button:hover {
-    color: #262a2b;
-}
-
-.tilesWrap li button:hover:before {
-    left: 0;
-    opacity: 1;
-}
-
-.tilesWrap li:hover h2 {
-    top: 0px;
-    opacity: 0.6;
-}
-
-.tilesWrap li:before {
-    content: '';
-    position: absolute;
-    top: -2px;
-    left: -2px;
-    right: -2px;
-    bottom: -2px;
-    z-index: -1;
-    background: #fff;
-    transform: skew(2deg, 2deg);
-}
-
-.tilesWrap li:after {
-    content: '';
-    position: absolute;
-    width: 40%;
-    height: 100%;
-    left: 0;
-    top: 0;
-    background: rgba(255, 255, 255, 0.02);
-}
-
-.tilesWrap li:nth-child(1):before {
-    background: #C9FFBF;
-    background: -webkit-linear-gradient(to right, #FFAFBD, #C9FFBF);
-    background: linear-gradient(to right, #FFAFBD, #C9FFBF);
-}
-
-.tilesWrap li:nth-child(2):before {
-    background: #f2709c;
-    background: -webkit-linear-gradient(to right, #ff9472, #f2709c);
-    background: linear-gradient(to right, #ff9472, #f2709c);
-}
-
-.tilesWrap li:nth-child(3):before {
-    background: #c21500;
-    background: -webkit-linear-gradient(to right, #ffc500, #c21500);
-    background: linear-gradient(to right, #ffc500, #c21500);
-}
-
-.tilesWrap li:nth-child(4):before {
-    background: #FC354C;
-    background: -webkit-linear-gradient(to right, #0ABFBC, #FC354C);
-    background: linear-gradient(to right, #0ABFBC, #FC354C);
-}
-.tilesWrap li:nth-child(5):before {
-    background: #FC354C;
-    background: -webkit-linear-gradient(to right, #0ABFBC, #FC354C);
-    background: linear-gradient(to right, #0ABFBC, #FC354C);
-}
-.tilesWrap li:nth-child(6):before {
-    background: #C9FFBF;
-    background: -webkit-linear-gradient(to right, #FFAFBD, #C9FFBF);
-    background: linear-gradient(to right, #FFAFBD, #C9FFBF);
-}
-
-.tilesWrap li:nth-child(7):before {
-    background: #f2709c;
-    background: -webkit-linear-gradient(to right, #ff9472, #f2709c);
-    background: linear-gradient(to right, #ff9472, #f2709c);
-}
-
-.tilesWrap li:nth-child(8):before {
-    background: #c21500;
-    background: -webkit-linear-gradient(to right, #ffc500, #c21500);
-    background: linear-gradient(to right, #ffc500, #c21500);
-}
-
-.tilesWrap li:nth-child(9):before {
-    background: #FC354C;
-    background: -webkit-linear-gradient(to right, #0ABFBC, #FC354C);
-    background: linear-gradient(to right, #0ABFBC, #FC354C);
+dd {
+	margin-left: 5vw;
+	margin-bottom: 2vh;
 }
