--- a/app/templates/main/help.html
+++ b/app/templates/main/help.html
@@ -1,30 +1,18 @@
 {% extends "base.html" %}
 {% block content %}
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='cards.css') }}">
-<ul class="tilesWrap">
-    <li>
-        <h2>01</h2>
-        <h3>Регистрация</h3>
-        <p>
-            Чтобы создать учетную запись, перейдите на страницу <a href="{{ url_for('auth.sign_up') }}">Регистрация</a>,
+<section class="dl-blurbs">
+    <dl>
+        <dt>Регистрация</dt>
+        <dd>Чтобы создать учетную запись, перейдите на страницу <a href="{{ url_for('auth.sign_up') }}">Регистрация</a>,
             заполните форму
-            в соответствии с описанием полей и нажмите кнопку <b>Создать аккаунт</b>
-        </p>
-    </li>
-    <li>
-        <h2>02</h2>
-        <h3>Авторизация</h3>
-        <p>
-            Чтобы войти в учетную запись, перейдите на страницу <a href="{{ url_for('auth.sign_in') }}">авторизации</a>,
+            в соответствии с описанием полей и нажмите кнопку <b>Создать аккаунт</b></dd>
+        <dt>Авторизация</dt>
+        <dd>Чтобы войти в учетную запись, перейдите на страницу <a href="{{ url_for('auth.sign_in') }}">авторизации</a>,
             заполните форму
-            в соответствии с описанием полей и нажмите кнопку <b>Войти</b>
-        </p>
-    </li>
-    <li>
-        <h2>03</h2>
-        <h3>Восстановление пароля (1 часть)</h3>
-        <p>
-            Если Вы забыли пароль от Вашей учетной записи, перейдите на страницу <a
+            в соответствии с описанием полей и нажмите кнопку <b>Войти</b></dd>
+        <dt>Восстановление пароля (1 часть)</dt>
+        <dd>Если Вы забыли пароль от Вашей учетной записи, перейдите на страницу <a
                 href="{{ url_for('auth.sign_in') }}">авторизации</a>
             и нажмите на ссылку <a href="{{ url_for('auth.send_reset_password_email') }}">Восстановить</a>. Вы будете
             перенаправлены на страницу восстановления пароля,
@@ -32,73 +20,40 @@
             формы
             нажмите на кнопку <b>Отправить Письмо</b>. Если почта введена верно, то на нее придет сообщения с
             инструкциями
-            по восстановлению пароля
-        </p>
-    </li>
-    <li>
-        <h2>04</h2>
-        <h3>Восстановление пароля (2 часть)</h3>
-        <p>
-            После перехода по ссылке из сообщения, Вы будете перенаправлены на страницу для создания
-        нового
-        пароля. Введите новый пароль и нажмите <b>Сменить</b>
-        </p>
-    </li>
-    <li>
-        <h2>05</h2>
-        <h3>Создание заявки на перевозку</h3>
-        <p>
-            Чтобы оставить заявку на перевозку, перейдите на <a
-            href="{{ url_for('main.index') }}">главную
-            страницу</a>, заполните
-        форму в соответствии с описанем полей формы и нажми кнопку <b>Создать</b>
-        </p>
-    </li>
-    <li>
-        <h2>06</h2>
-        <h3>Просмотр заявок</h3>
-        <p>
-            Чтобы просмотреть Ваши заявки, перейдите в <a
-            href="{{ url_for('profile.profile') }}">Профиль</a>
-        и вы увидите список заявок.
-        Нажмите на кнопку <b>Подробнее</b>, чтобы посмотреть полные данные заявки. Также можно нажать кнопку удалить,
-        чтобы убрать заявку из обработки
-        </p>
-    </li>
-    <li>
-        <h2>07</h2>
-        <h3>Смена пароля</h3>
-        <p>
-            Чтобы сменить пароль, перейдите в <a href="{{ url_for('profile.profile') }}">Профиль</a> и
-        справа
-        в <b>карточке</b> нажмите
-        кнопку <b>Сменить пароль</b>. Далее вас отправит на страницу для смены пароля. Заполните форму в соответствии с
-        описанием и нажмите кнопку <b>Сменить</b>
-        </p>
-    </li>
-    <li>
-        <h2>08</h2>
-        <h3>Смена почты</h3>
-        <p>
-            Чтобы сменить пароль, перейдите в <a href="{{ url_for('profile.profile') }}">Профиль</a> и
-        справа
-        в <b>карточке</b> нажмите
-        кнопку <b>Сменить пароль</b>. Далее вас отправит на страницу для смены пароля. Заполните форму в соответствии с
-        описанием и нажмите кнопку <b>Сменить</b>
-        </p>
-    </li>
-    <li>
-        <h2>09</h2>
-        <h3>Смена пароля</h3>
-        <p>
-            Чтобы сменить почту, перейдите в <a href="{{ url_for('profile.profile') }}">Профиль</a> и
-        справа
-        в <b>карточке</b> нажмите
-        кнопку <b>Сменить почту</b>. Далее вас отправит на страницу для смены почты. Заполните форму в соответствии с
-        описанием и нажмите кнопку <b>Сменить</b>
-        </p>
-    </li>
-</ul>
+            по восстановлению пароля</dd>
+    </dl>
+    <dl>
+        <dt>Восстановление пароля (2 часть)</dt>
+        <dd>После перехода по ссылке из сообщения, Вы будете перенаправлены на страницу для создания
+            нового
+            пароля. Введите новый пароль и нажмите <b>Сменить</b></dd>
+        <dt>Создание заявки на перевозку</dt>
+        <dd>Чтобы оставить заявку на перевозку, перейдите на <a href="{{ url_for('main.index') }}">главную
+                страницу</a>, заполните
+            форму в соответствии с описанем полей формы и нажми кнопку <b>Создать</b>
+        </dd>
+        <dt>Просмотр заявок</dt>
+        <dd>Чтобы просмотреть Ваши заявки, перейдите в <a href="{{ url_for('profile.profile') }}">Профиль</a>
+            и вы увидите список заявок.
+            Нажмите на кнопку <b>Подробнее</b>, чтобы посмотреть полные данные заявки. Также можно нажать кнопку
+            удалить,
+            чтобы убрать заявку из обработки</dd>
+        <dt>Смена пароля</dt>
+        <dd>Чтобы сменить пароль, перейдите в <a href="{{ url_for('profile.profile') }}">Профиль</a> и
+            справа
+            в <b>карточке</b> нажмите
+            кнопку <b>Сменить пароль</b>. Далее вас отправит на страницу для смены пароля. Заполните форму в
+            соответствии с
+            описанием и нажмите кнопку <b>Сменить</b></dd>
+        <dt>Смена почты</dt>
+        <dd>Чтобы сменить пароль, перейдите в <a href="{{ url_for('profile.profile') }}">Профиль</a> и
+            справа
+            в <b>карточке</b> нажмите
+            кнопку <b>Сменить пароль</b>. Далее вас отправит на страницу для смены пароля. Заполните форму в
+            соответствии с
+            описанием и нажмите кнопку <b>Сменить</b></dd>
+    </dl>
+</section>
 <!-- <div class="row" style="vertical-align: middle;">
     <div class=".col-6 .col-md-4">
         <h4>Регистрация</h4>
