--- a/app/templates/manage/manager_profile.html
+++ b/app/templates/manage/manager_profile.html
@@ -19,7 +19,7 @@
 </style>
 <div class="container">
     <div class="row">
-        <div class="col-sm-8" style="width:50%;margin-right:15%;margin-top:2%;">
+        <div class="col-lg-8" style="width:50%;margin-right:15%;margin-top:2%;">
             <div class="row" style="background:white;color:black;border-width:5px;border-color: black; display:flex;align-items:center;border-radius: 5px;">
                 {% for order in orders %}
                 <p>
@@ -131,7 +131,7 @@
                 {% endfor %}
             </div>
         </div>
-        <div class="col-sm-4">
+        <div class="col-lg-4">
             <div class="card" style="width: 75%;margin-top:6%">
                 <div class="card-body">
                     <h5 class="card-title">Менеджер - {{ user.username }}</h5>
