--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -8,14 +8,14 @@
         <div class="col-md-offset-3 col-md-6">
             <form class="form-horizontal" method="POST" action="" name="FormOrder">
                 <div class="form-group" style="padding-top:30px">
-                    <input type="text" required class="form-control" placeholder="ФИО" name="FCS">
+                    <input type="text" maxlength="100" required class="form-control" pattern="[a-zA-Z0-9 ]+" title="Можно вводить только буквы и цифры" placeholder="ФИО" name="FCS">
                 </div>
                 <div class="form-group help">
                     <input type="text" required class="form-control" placeholder="Номер телефона" name="phone" id="phone"
                         onkeypress="return (event.charCode == 8 || event.charCode == 0 || event.charCode == 13) ? null : event.charCode >= 48 && event.charCode <= 57">
                 </div>
                 <div class="form-group help">
-                    <input type="text" required class="form-control" placeholder="E-mail адрес" name="email">
+                    <input type="text" required class="form-control" maxlength="100" pattern="^[A-Za-z0-9_]+@[A-Za-z0-9_]+\.[a-z]+$" title="Введите корректный формат почты" placeholder="E-mail адрес" name="email">
                 </div>
                 <div class="form-group help">
                     <select name="ta" required id="ta" class="selectpicker form-control">
@@ -25,7 +25,7 @@
                 </div>
                 <div class="row">
                     <div class="col-sm form-group help">
-                        <input type="text" required class="form-control" name="amount" id="amount"
+                        <input type="text" required class="form-control" maxlength="100" name="amount" id="amount"
                             placeholder="Кол-во пассажиров" onkeypress="return (event.charCode==8 || event.charCode==0 ||
                             event.charCode==13) ? null : event.charCode>= 48 && event.charCode <= 57">
                     </div>
@@ -40,13 +40,13 @@
                 </div>
                 <div class="form-group help">
                     <input type="date" name="calendar" required value="{{ today }}" min="{{ today }}"
-                        max="{{ max_day }}" class="form-control" placeholder="Пароль">
+                        max="{{ max_day }}" class="form-control" placeholder="Дата">
                 </div>
                 <div class="form-group help">
-                    <input type="text" class="form-control" required placeholder="Откуда" name="from">
+                    <input type="text" class="form-control" maxlength="100" pattern="[a-zA-Z0-9 ]+" title="Можно вводить только буквы и цифры" required placeholder="Откуда" name="from">
                 </div>
                 <div class="form-group help">
-                    <input type="text" class="form-control" required placeholder="Куда" name="to">
+                    <input type="text" class="form-control" maxlength="100" pattern="[a-zA-Z0-9 ]+" title="Можно вводить только буквы и цифры" required placeholder="Куда" name="to">
                 </div>
 
                 <div class="form-group help">
