--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -54,7 +54,7 @@
     </style>
     <!-- Навигация -->
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar navbar-expand-sm navbar-light bg-light">
         <a class="navbar-brand" href="{{ url_for('main.index') }}">
           <div class="fs-2 mb-3">
             <svg
