--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -76,7 +76,7 @@
         <div class="col-lg-4">
             <div class="card" style="width: 18rem;margin-top:6%">
                 <div class="card-body">
-                    <h5 class="card-title">Пользователь - {{ user.username }}</h5>
+                    <h5 class="card-title">{{ user.username }}</h5>
                     <h6 class="card-subtitle mb-2 text-muted">{{ user.email }}</h6>
                     <p class="card-text">
                         <button type="button" class="btn btn-primary" id="btn"><a
