--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -8,7 +8,7 @@
         <div class="col-md-offset-3 col-md-6">
             <form class="form-horizontal" method="POST" action="" name="FormOrder">
                 <div class="form-group" style="padding-top:30px">
-                    <input type="text" maxlength="100" required class="form-control" pattern="[a-zA-Z0-9 ]+" title="Можно вводить только буквы и цифры" placeholder="ФИО" name="FCS">
+                    <input type="text" maxlength="100" required class="form-control" title="Можно вводить только буквы и цифры" placeholder="ФИО" name="FCS">
                 </div>
                 <div class="form-group help">
                     <input type="text" required class="form-control" placeholder="Номер телефона" name="phone" id="phone"
@@ -43,10 +43,10 @@
                         max="{{ max_day }}" class="form-control" placeholder="Дата">
                 </div>
                 <div class="form-group help">
-                    <input type="text" class="form-control" maxlength="100" pattern="[a-zA-Z0-9 ]+" title="Можно вводить только буквы и цифры" required placeholder="Откуда" name="from">
+                    <input type="text" class="form-control" maxlength="100" title="Можно вводить только буквы и цифры" required placeholder="Откуда" name="from">
                 </div>
                 <div class="form-group help">
-                    <input type="text" class="form-control" maxlength="100" pattern="[a-zA-Z0-9 ]+" title="Можно вводить только буквы и цифры" required placeholder="Куда" name="to">
+                    <input type="text" class="form-control" maxlength="100" title="Можно вводить только буквы и цифры" required placeholder="Куда" name="to">
                 </div>
 
                 <div class="form-group help">
