--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -150,6 +150,10 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
-    <script></script>
+      [if IE]>
+  <script type="text/javascript">
+  window.location = "redirect";
+  </script>
+  <![endif]
   </body>
 </html>
