--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -15,7 +15,7 @@
                         onkeypress="return (event.charCode == 8 || event.charCode == 0 || event.charCode == 13) ? null : event.charCode >= 48 && event.charCode <= 57">
                 </div>
                 <div class="form-group help">
-                    <input type="text" required class="form-control" maxlength="100" pattern="^[A-Za-z0-9_]+@[A-Za-z0-9_]+\.[a-z]+$" title="Введите корректный формат почты" placeholder="E-mail адрес" name="email">
+                    <input type="text" required class="form-control" maxlength="100" pattern="^[A-Za-z0-9_\.]+@[A-Za-z0-9_]+\.[a-z]+$" title="Введите корректный формат почты" placeholder="E-mail адрес" name="email">
                 </div>
                 <div class="form-group help">
                     <select name="ta" required id="ta" class="selectpicker form-control">
